--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
   <div id="output_text"></div>
 
-  <button id="button_dice"></button>
-
+  <button id="button_dice">Inizia</button>
+  <div id="result_player"></div>
+  <div id="result_computer"></div>
+  <div id="winner"></div>
   <script src="js/script.js"></script>
 </body>
 </html>
