Added new type con input data convalidation not on prompt

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
   <div id="output_text"></div>
-
+  <input type="text" id="useremail" value="" placeholder="exemple@mail.com">
+  <button id="mb_login">Accedi</button>
+  <br>
   <button id="button_dice">Inizia</button>
   <div id="result_player"></div>
   <div id="result_computer"></div>
