--- a/index.html
+++ b/index.html
@@ -4,18 +4,51 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=+, initial-scale=1.0">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
 <body>
-
-  <div id="output_text"></div>
-  <input type="text" id="useremail" value="" placeholder="exemple@mail.com">
-  <button id="mb_login">Accedi</button>
-  <br>
-  <button id="button_dice">Inizia</button>
-  <div id="result_player"></div>
-  <div id="result_computer"></div>
-  <div id="winner"></div>
+  <!-- Accesso -->
+  <div class="container d-flex flex-column align-items-center mb_logging">
+    <div>
+      <h3>Inserisci la tua mail qua sotto:</h3>
+      <input type="text" id="useremail" value="" placeholder="exemple@mail.com">
+      <button id="mb_login">Accedi</button>
+    </div>
+    <h2 id="output_text"></h2>
+  </div>
+  <!-- /Accesso -->
+  
+  <!-- Gioco -->
+  <div class="container mb_dicegame mb_show">
+    <div class="d-flex flex-column justify-content-center align-items-center">
+      <button id="button_dice">Inizia</button>
+      <div class="row">
+        <div class="col mb_columns">
+          <h1>IL TUO DADO È STATO TRATTO:</h1>
+        </div>
+        <div class="col mb_columns">
+          <h1>IL DADO DEL COMPUTER È STATO TRATTO:</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="mb_columns_numbers d-flex justify-content-center align-items-center">
+            <p id="result_player"></p>
+          </div>
+        </div>
+        <div class="col mb_columns_numbers d-flex justify-content-center align-items-center">
+          <p id="result_computer"></p>
+        </div>
+      </div>
+      <h1 id="winner"></h1>
+  </div>
+  <!-- /Gioco -->
+  
+  
   <script src="js/script.js"></script>
 </body>
 </html>
